--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- -------------------fonts-------------------- -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <!-- ---------------------fonts end----------------------- -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- -------------------------bootstrap------------------ -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- -----------------------main css--------------------------------- -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="white">
@@ -65,13 +69,115 @@
     </section>
 
 
-
-
-
-
-
     <!-- -------------------------------banner end here--------------------- -->
 
+
+    <!-- ------------------------------about start here------------------------ -->
+
+    <section id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 about__heading_main">
+                    <div class="about__heading">
+                        <h6>who are we</h6>
+                        <h2>about us</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodpor nt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exion ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        </p>
+                    </div>
+                    <div class="about__p">
+                        <p>We are the best in the line, worldwide. </p>
+                        <p>No more wasting time, Eveeryone can animate. </p>
+                        <p>We work with orgnizations to craft immersive customer experience. </p>
+                        <p>We are committed to make your business successful. </p>
+                        <p>We can make your business successful that you had not ever think. </p>
+                    </div>
+                    <div class="about__btn">
+                        <a class="common_btn" href="#">know more</a>
+                        <a class="common_btn" href="#">Read later</a>
+                    </div>
+                </div>
+                <div class="col-lg-6 about__img">
+                    <img src="images/about.png" alt="abiut" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ---------------------------------about end here----------------------- -->
+
+    <!-- -------------------------------tool start here------------------------- -->
+
+    <section id="tool">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 tool__heading">
+                    <h6>Core feature</h6>
+                    <h2>Provide awsome service <br> with our tools</h2>
+                </div>
+                <div class="col-lg-6 tool__img">
+                    <p>
+                        With over 25 years of experience, we have crafted thousands of strategic discovery process that enables us to peel back the layers which enable us to understand. 
+                    </p>
+                    <img src="images/servicce.png" alt="img" class="img-fluid">
+                </div>
+                <div class="col-lg-6 tool__service">
+                    <div class="service_content">
+                        <img src="images/content1.png" alt="img" class="img-fluid">
+                        <div class="content_detail">
+                            <h3>SEO Consultancy</h3>
+                            <p>
+                                Nam libero tempore, cum soluta nobis est eligendi optio cumque
+                            </p>
+                        </div>
+                    </div>
+                    <div class="service_content">
+                        <img src="images/content1.png" alt="img" class="img-fluid">
+                        <div class="content_detail">
+                            <h3>SEO Consultancy</h3>
+                            <p>
+                                Nam libero tempore, cum soluta nobis est eligendi optio cumque
+                            </p>
+                        </div>
+                    </div>
+                    <div class="service_content">
+                        <img src="images/content1.png" alt="img" class="img-fluid">
+                        <div class="content_detail">
+                            <h3>SEO Consultancy</h3>
+                            <p>
+                                Nam libero tempore, cum soluta nobis est eligendi optio cumque
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+    <!-- ----------------------------------tool end here------------------------------ -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+    <!-- --------------------------color switcher------------------------------ -->
 
     <section id="color_pick">
         <div class="container">
@@ -92,7 +198,7 @@
         </div>
     </section>
 
-
+    <!-- --------------------------color switcher------------------------------ -->
     
 
 
