--- a/index.html
+++ b/index.html
@@ -154,17 +154,69 @@
         </div>
     </section>
 
-
-
-
-
-
-
-
-
     <!-- ----------------------------------tool end here------------------------------ -->
 
+    <!-- ----------------------------------blog start here---------------------------- -->
 
+
+    <section id="blog">
+        <div class="container">
+            <h4>Our blog</h4>
+            <div class="row">
+                <div class="col-lg-4 blog__main">
+                    <div class="blog_item">
+                        <img src="images/blog1.jpg" alt="img" class="img-fluid">
+                        <h6>19 Jan 2022</h6>
+                        <h4>
+                            How one Webflow user grew his single person consultancy from $0-100K in 14 months
+                        </h4>
+                        <p>
+                            See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract
+                        </p>
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+                <div class="col-lg-4 blog__main">
+                    <div class="blog_item">
+                        <img src="images/blog2.jpg" alt="img" class="img-fluid">
+                        <h6>19 Jan 2022</h6>
+                        <h4>
+                            How one Webflow user grew his single person consultancy from $0-100K in 14 months
+                        </h4>
+                        <p>
+                            See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract
+                        </p>
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+                <div class="col-lg-4 blog__main">
+                    <div class="blog_item">
+                        <img src="images/blog3.jpg" alt="img" class="img-fluid">
+                        <h6>19 Jan 2022</h6>
+                        <h4>
+                            How one Webflow user grew his single person consultancy from $0-100K in 14 months
+                        </h4>
+                        <p>
+                            See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract
+                        </p>
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+    <!-- ----------------------------------blog end here-------------------- -->
 
 
 
