--- a/index.html
+++ b/index.html
@@ -207,16 +207,28 @@
     </section>
 
 
-
-
-
-
-
-
-
-
-
     <!-- ----------------------------------blog end here-------------------- -->
+
+    <!-- ----------------------------team start here------------------- -->
+
+    <section id="team">
+        <div class="container">
+            
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+    <!-- ----------------------------team start here------------------- -->
+
+
 
 
 
@@ -239,8 +251,8 @@
                 </span>
                 <div class="color activate">
                     <ul >
-                        <li id="blue"></li>
                         <li id="white"></li>
+                        <li id="blue"></li>                        
                         <li id="black"></li>
                         <li id="red"></li>
                         <li id="purple"></li>
