--- a/index.html
+++ b/index.html
@@ -213,7 +213,68 @@
 
     <section id="team">
         <div class="container">
-            
+            <div class="team__heading">
+                <p>OUR TEAM</p>
+                <h2>Our Great Team Is Very <br> Dedicated For You</h2>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 team__detail_main" >
+                    <div class="team__detail">
+                        <div class="team__img">
+                            <img src="images/t3-1-1.jpg" alt="img">
+                            <div class="overlay">
+                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                            </div>
+                        </div>
+                        <p>FOUNDER</p>
+                        <h4>Romanda Panda</h4>
+                    </div>                    
+                </div>
+                <div class="col-lg-3 team__detail_main" >
+                    <div class="team__detail">
+                        <div class="team__img">
+                            <img src="images/t1-1-1.jpg" alt="img">
+                            <div class="overlay">
+                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                            </div>
+                        </div>
+                        <p>CO-FOUNDER</p>
+                        <h4>Amanda Panda</h4>
+                    </div>                    
+                </div>
+                <div class="col-lg-3 team__detail_main" >
+                    <div class="team__detail">
+                        <div class="team__img">
+                            <img src="images/t2-1-1.jpg" alt="img">
+                            <div class="overlay">
+                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                            </div>
+                        </div>
+                        <p>DEVELOPER</p>
+                        <h4>Alexander Smith</h4>
+                    </div>                    
+                </div>
+                <div class="col-lg-3 team__detail_main" >
+                    <div class="team__detail">
+                        <div class="team__img">
+                            <img src="images/t4-1-1.jpg" alt="img">
+                            <div class="overlay">
+                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                            </div>
+                        </div>
+                        <p>ACCOUNTANT</p>
+                        <h4>Jennifer Watson </h4>
+                    </div>                    
+                </div>
+            </div>
         </div>
     </section>
 
@@ -272,6 +333,7 @@
 
 
     <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="https://kit.fontawesome.com/eccb807151.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
 </body>
