--- a/index.html
+++ b/index.html
@@ -278,18 +278,139 @@
         </div>
     </section>
 
-
-
-
-
-
-
-
-
-
     <!-- ----------------------------team start here------------------- -->
 
+    <!-- -------------------------------service start here-------------- -->
 
+    <section id="service">
+        <div class="container">
+            <div class="service__heading">
+                <p>our service</p>
+                <h2>Design that solves problems <br> one product at a time</h2>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="service__main">
+                        <img src="images/Icon1.png" alt="img">
+                        <div class="service__detail">
+                            <h4>Uses Client First</h4>
+                            <p>
+                                Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="service__main">
+                        <img src="images/Icon.png" alt="img">
+                        <div class="service__detail">
+                            <h4>Two Free Revision Round</h4>
+                            <p>
+                                Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="service__main">
+                        <img src="images/Icon(1).png" alt="img">
+                        <div class="service__detail">
+                            <h4>Template Customization</h4>
+                            <p>
+                                Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="service__main">
+                        <img src="images/Icon(2).png" alt="img">
+                        <div class="service__detail">
+                            <h4>24/7 Support</h4>
+                            <p>
+                                Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="service__main">
+                        <img src="images/Icon(3).png" alt="img">
+                        <div class="service__detail">
+                            <h4>Quick Delivery</h4>
+                            <p>
+                                Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="service__main">
+                        <img src="images/Icon(4).png" alt="img">
+                        <div class="service__detail">
+                            <h4>Hands-on approach</h4>
+                            <p>
+                                Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- -------------------------------service start here -------------- -->
+
+    <!-- ------------------------------footer start here---------------------- -->
+
+    <section id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 logo">
+                    <img src="images/logooo.png" alt="img">
+                    <p>
+                        We are always open to discuss your project and improve your online presence. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro alias sequi sint. Unde aspernatur a totam in ipsa adipisci commodi beatae quae. Ipsum repellendus, quo praesentium id obcaecati molestias fugiat.
+                    </p>
+                </div>
+                <div class="col-lg-1"></div>
+                <div class="col-lg-3 talk">
+                    <h4>Lets Talk!</h4>
+                    <p>
+                        We are always open to discuss your project, improve your online presence and help with your UX/UI design challenges.
+                    </p>
+                    <div class="icon">
+                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-1"></div>
+                <div class="col-lg-3 list">
+                    <h6>Features</h6>
+                    <div class="footer__link">
+                        <a href="#">home</a>
+                        <a href="#">about</a>
+                        <a href="#">benifit</a>
+                        <a href="#">pricing</a>
+                        <a href="#">blog</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+    <!-- ------------------------------footer end here---------------------- -->
 
 
 
