--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- -----------------------main css--------------------------------- -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- ------------------------responsive css-------------------------- -->
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body class="white">
     
@@ -56,7 +58,7 @@
     <section id="banner">
         <div class="container">
             <div class=" row  banner__wrapper">
-                <div class="col-lg-5 banner__heading">
+                <div class="col-sm-12 col-md-12 col-lg-5 banner__heading">
                     <h1>Building stellar websites for early startups</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. </p>
                     <a href="#">View our work</a>
@@ -77,7 +79,7 @@
     <section id="about">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 about__heading_main">
+                <div class="col-sm-12 col-md-12 col-lg-6 about__heading_main">
                     <div class="about__heading">
                         <h6>who are we</h6>
                         <h2>about us</h2>
@@ -97,7 +99,7 @@
                         <a class="common_btn" href="#">Read later</a>
                     </div>
                 </div>
-                <div class="col-lg-6 about__img">
+                <div class="col-sm-12 col-md-12 col-lg-6 about__img">
                     <img src="images/about.png" alt="abiut" class="img-fluid">
                 </div>
             </div>
@@ -111,7 +113,7 @@
     <section id="tool">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 tool__heading">
+                <div class="col-sm-12  col-md-12col-lg-12 tool__heading">
                     <h6>Core feature</h6>
                     <h2>Provide awsome service <br> with our tools</h2>
                 </div>
@@ -121,7 +123,7 @@
                     </p>
                     <img src="images/servicce.png" alt="img" class="img-fluid">
                 </div>
-                <div class="col-lg-6 tool__service">
+                <div class="col-sm-12 col-md-12 col-lg-6 tool__service">
                     <div class="service_content">
                         <img src="images/content1.png" alt="img" class="img-fluid">
                         <div class="content_detail">
@@ -163,7 +165,7 @@
         <div class="container">
             <h4>Our blog</h4>
             <div class="row">
-                <div class="col-lg-4 blog__main">
+                <div class="col-sm-6 col-md-6  col-lg-4 blog__main">
                     <div class="blog_item">
                         <img src="images/blog1.jpg" alt="img" class="img-fluid">
                         <h6>19 Jan 2022</h6>
@@ -176,7 +178,7 @@
                         <a href="#">Read More</a>
                     </div>
                 </div>
-                <div class="col-lg-4 blog__main">
+                <div class="col-sm-6 col-md-6  col-lg-4 blog__main">
                     <div class="blog_item">
                         <img src="images/blog2.jpg" alt="img" class="img-fluid">
                         <h6>19 Jan 2022</h6>
@@ -189,7 +191,7 @@
                         <a href="#">Read More</a>
                     </div>
                 </div>
-                <div class="col-lg-4 blog__main">
+                <div class="col-sm-6 col-md-6  col-lg-4 blog__main">
                     <div class="blog_item">
                         <img src="images/blog3.jpg" alt="img" class="img-fluid">
                         <h6>19 Jan 2022</h6>
@@ -218,7 +220,7 @@
                 <h2>Our Great Team Is Very <br> Dedicated For You</h2>
             </div>
             <div class="row">
-                <div class="col-lg-3 team__detail_main" >
+                <div class="col-sm-6 col-md-4 col-lg-3 team__detail_main" >
                     <div class="team__detail">
                         <div class="team__img">
                             <img src="images/t3-1-1.jpg" alt="img">
@@ -232,7 +234,7 @@
                         <h4>Romanda Panda</h4>
                     </div>                    
                 </div>
-                <div class="col-lg-3 team__detail_main" >
+                <div class="col-sm-6 col-md-4 col-lg-3 team__detail_main" >
                     <div class="team__detail">
                         <div class="team__img">
                             <img src="images/t1-1-1.jpg" alt="img">
@@ -246,7 +248,7 @@
                         <h4>Amanda Panda</h4>
                     </div>                    
                 </div>
-                <div class="col-lg-3 team__detail_main" >
+                <div class="col-sm-6 col-md-4 col-lg-3 team__detail_main" >
                     <div class="team__detail">
                         <div class="team__img">
                             <img src="images/t2-1-1.jpg" alt="img">
@@ -260,7 +262,7 @@
                         <h4>Alexander Smith</h4>
                     </div>                    
                 </div>
-                <div class="col-lg-3 team__detail_main" >
+                <div class="col-sm-6 col-md-4 col-lg-3 team__detail_main" >
                     <div class="team__detail">
                         <div class="team__img">
                             <img src="images/t4-1-1.jpg" alt="img">
@@ -282,7 +284,7 @@
 
     <!-- -------------------------------service start here-------------- -->
 
-    <section id="service">
+    <!-- <section id="service">
         <div class="container">
             <div class="service__heading">
                 <p>our service</p>
@@ -357,13 +359,13 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- -------------------------------service start here -------------- -->
 
     <!-- ------------------------------footer start here---------------------- -->
 
-    <section id="footer">
+    <!-- <section id="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 logo">
@@ -398,7 +400,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
 
