--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <a href="#">View our work</a>
                 </div>
                 <div class="col-lg-7 banner__img">
-                    <img src="images/skill.png" alt="img">
+                    <img src="images/skill.png" alt="img" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -125,7 +125,7 @@
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-6 tool__service">
                     <div class="service_content">
-                        <img src="images/content1.png" alt="img" class="img-fluid">
+                        <img src="images/content1.png" alt="img" class="">
                         <div class="content_detail">
                             <h3>SEO Consultancy</h3>
                             <p>
@@ -284,14 +284,14 @@
 
     <!-- -------------------------------service start here-------------- -->
 
-    <!-- <section id="service">
+    <section id="service">
         <div class="container">
             <div class="service__heading">
                 <p>our service</p>
                 <h2>Design that solves problems <br> one product at a time</h2>
             </div>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-sm-6 col-md-6 col-lg-4">
                     <div class="service__main">
                         <img src="images/Icon1.png" alt="img">
                         <div class="service__detail">
@@ -302,7 +302,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-sm-6 col-md-6 col-lg-4">
                     <div class="service__main">
                         <img src="images/Icon.png" alt="img">
                         <div class="service__detail">
@@ -313,7 +313,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-sm-6 col-md-6 col-lg-4">
                     <div class="service__main">
                         <img src="images/Icon(1).png" alt="img">
                         <div class="service__detail">
@@ -324,7 +324,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-sm-6 col-md-6 col-lg-4">
                     <div class="service__main">
                         <img src="images/Icon(2).png" alt="img">
                         <div class="service__detail">
@@ -335,7 +335,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-sm-6 col-md-6 col-lg-4">
                     <div class="service__main">
                         <img src="images/Icon(3).png" alt="img">
                         <div class="service__detail">
@@ -346,7 +346,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-sm-6 col-md-6 col-lg-4">
                     <div class="service__main">
                         <img src="images/Icon(4).png" alt="img">
                         <div class="service__detail">
@@ -359,23 +359,34 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- -------------------------------service start here -------------- -->
 
     <!-- ------------------------------footer start here---------------------- -->
 
-    <!-- <section id="footer">
+    <section id="footer">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 logo">
+                <div class="col-sm-7 com-md-7  col-lg-4 logo">
                     <img src="images/logooo.png" alt="img">
                     <p>
                         We are always open to discuss your project and improve your online presence. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro alias sequi sint. Unde aspernatur a totam in ipsa adipisci commodi beatae quae. Ipsum repellendus, quo praesentium id obcaecati molestias fugiat.
                     </p>
                 </div>
-                <div class="col-lg-1"></div>
-                <div class="col-lg-3 talk">
+                <div class="col-sm-1 c0l-md-1 col-lg-1"></div>
+                <div class="col-sm-4 col-md-4 col-lg-3 list">
+                    <h6>Features</h6>
+                    <div class="footer__link">
+                        <a href="#">home</a>
+                        <a href="#">about</a>
+                        <a href="#">benifit</a>
+                        <a href="#">pricing</a>
+                        <a href="#">blog</a>
+                    </div>
+                </div>
+                <div class="col-lg-1"></div>                
+                <div class="col-sm-6 col-md-6 col-lg-3 talk">
                     <h4>Lets Talk!</h4>
                     <p>
                         We are always open to discuss your project, improve your online presence and help with your UX/UI design challenges.
@@ -387,20 +398,9 @@
                         <a href="#"><i class="fa-brands fa-youtube"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-1"></div>
-                <div class="col-lg-3 list">
-                    <h6>Features</h6>
-                    <div class="footer__link">
-                        <a href="#">home</a>
-                        <a href="#">about</a>
-                        <a href="#">benifit</a>
-                        <a href="#">pricing</a>
-                        <a href="#">blog</a>
-                    </div>
-                </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
 
 
@@ -429,10 +429,7 @@
 
     <section id="color_pick">
         <div class="container">
-            <div class="color__main">
-                <span class="setting ">
-                    <i class="fa fa-cog fa-lg fa-spin"></i>
-                </span>
+            <div class="color__main">                
                 <div class="color activate">
                     <ul >
                         <li id="white"></li>
@@ -442,6 +439,9 @@
                         <li id="purple"></li>
                     </ul>
                 </div>
+                <span class="setting ">
+                    <i class="fa fa-cog fa-lg fa-spin"></i>
+                </span>
             </div>
         </div>
     </section>
