--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item mx-4">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#">about</a>
                     </li>
                     <li class="nav-item mx-4">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#">service</a>
                     </li>
                     <li class="nav-item mx-4">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#">blog</a>
                     </li>
                     <li class="nav-item mx-4">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#">contact</a>
                     </li>
                     <li class="nav-item mx-4">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#">shop</a>
                     </li>
                 </ul>                              
             </div>            
@@ -435,8 +435,7 @@
                         <li id="white"></li>
                         <li id="blue"></li>                        
                         <li id="black"></li>
-                        <li id="red"></li>
-                        <li id="purple"></li>
+                        <li id="orange"></li>
                     </ul>
                 </div>
                 <span class="setting ">
