--- a/index.html
+++ b/index.html
@@ -438,9 +438,9 @@
                         <li id="orange"></li>
                     </ul>
                 </div>
-                <span class="setting ">
+                <div class="setting ">
                     <i class="fa fa-cog fa-lg fa-spin"></i>
-                </span>
+                </div>
             </div>
         </div>
     </section>
