--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                         <li id="orange"></li>
                     </ul>
                 </div>
-                <div class="setting ">
+                <div class="setting activation">
                     <i class="fa fa-cog fa-lg fa-spin"></i>
                 </div>
             </div>
@@ -447,7 +447,15 @@
 
     <!-- --------------------------color switcher------------------------------ -->
     
-
+    <!-- --------bottom to top----------- -->
+    <!-- --------bottom to top----------- -->
+    <section>
+        <div class="bottom_to_top" style="display: flex;">
+            <i class="fa-solid fa-chevron-up"></i>
+        </div>
+    </section>
+    <!-- --------bottom to top----------- -->
+    <!-- --------bottom to top----------- -->
 
 
 
